Embedded research paper and added page photo

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								</article>
 								<article class="tile">
 									<span class="image">
-										<img src="images/tcds.jpg" alt="" />
+										<img src="images/streamline_transparent_resized.png" alt="" />
 									</span>
 									<a href="tcds.html">
 										<h2>TDCS Research</h2>
@@ -128,11 +128,7 @@
 									<a href="brainPrint.html">
 										<h2>3D Printing my Brain</h2>
 										<div class="content">
-<<<<<<< Updated upstream
-											<p>Haven't you wanted to hold a life-size replica of your brain?</p>
-=======
 											<p>Life size personal brain print</p>
->>>>>>> Stashed changes
 										</div>
 									</a>
 								</article>
