--- a/tcds.html
+++ b/tcds.html
@@ -39,11 +39,27 @@
 						<div class="inner">
 							<h1>TDCS Study</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>1</p>
-							<div id="center">
+							<p>When I entered 10th grade I was presented with the oppertunity to persure my own research through a three year college level course called Authentic Science Research through the University at Albany. I saw this as an excellent chance to persure something that I was interested in with relative freedom and get my first taste of what college coursework would be like.</p>
+							<div id="center"> <!-- TRY TO MAKE TEXT WRAP AROUND THIS TO THE LEFT? MAKE THIS RIGHT JUSTIFIED?-->
 								<iframe src="https://drive.google.com/file/d/0B45T8NgNh44_akl6SGJHa0xWLVk/preview" width="720" height="925"></iframe>
+								<p>Paper Submitted to Symposium</p></br>
 							</div>
-							<p>3</p>
+							<p>From the <a href="http://www.kingstoncityschools.org/news.cfm?story=112443">Kingston City School District's Website</a>:</p>
+							<blockquote>
+KHS Student Presents Science Research for Competition</br>
+
+Evan Lewis explains how he used KHS' 3D printer to assist in his research project.</br></br>
+Congratulations to Evan Lewis, in Mrs. Reiss’s Science Research class, who has been selected to present his research on “Current Amplitude during Trans-Cranial Direct Current Stimulation within Brain in Relation to Thickness of Surrounding Matter”</br></br>
+
+Take a peek back at October's KCSD District Happenings (below) to learn how Evan began his research project.</br></br>
+
+Science Research is designed for the student who wishes to pursue advanced areas of original research.During this three year research program students develop skills in bibliographic research, research methodology and modes of communicating research.   Students participate in group classes, individual meetings with the Science Research teacher, and research with a student-selected mentor at a university, medical center or research institute. The work-load for this course is very high.</br></br>
+
+The presentation will take place at Burnt Hills Ballston Lake High School on Saturday, January 30 From 8:00 AM to 2:00 PM. Should Evan place in this competition, he will join young scientists to present 31st annual Upstate New York Junior Science and Humanities Symposium, March 8th and 9th before 500+ fellow students, teachers, mentors and judges.</br></br>
+
+The symposium is sponsored by the University at Albany, the Academy of Applied Science and the U.S. Army, Navy and Air Force.
+</blockquote>
+						<p>Although I did not place in the competition, the experience was invaluable and I was invited back to Dr. Bikson's labratory to work towards getting my work published.</p>
 						</div>
 					</div>
 
@@ -62,7 +78,7 @@
 						<div class="inner">
 							<section>
 								<ul class="copyright">
-								<li>&copy; Evan Lewis | All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Evan Lewis | All rights reserved</li>
 								</ul>
 							</section>
 						</div>
@@ -74,7 +90,6 @@
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
