added image for brain waves

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 							-->
 								<article class="tile">
 									<span class="image">
-										<img src="images/waveVis.jpg" alt="" />
+										<img src="images/brainWaves.png" alt="" />
 									</span>
 									<a href="brainwaves.html">
-										<h2>Touching Brainwaves</h2>
+										<h2>Visualizing Brainwaves</h2>
 										<div class="content">
 											<p>Using the Emotiv Insight EEG headset, the data can be modeled into 3D objects.</p>
 										</div>
