--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								</article>
 								<article class="tile">
 									<span class="image">
-										<img src="images/keycap.png" alt="" />
+										<img src="images/octoKey.jpg" alt="" />
 									</span>
 									<a href="key.html">
 										<h2>3D Designed and Printed Keycap</h2>
@@ -115,7 +115,7 @@
 									<span class="image">
 										<img src="images/streamline_transparent_resized.png" alt="" />
 									</span>
-									<a href="tcds.html">
+									<a href="tdcs.html">
 										<h2>TDCS Research</h2>
 										<div class="content">
 											<p>Culmination of a three year research project</p>
