--- a/mash.html
+++ b/mash.html
@@ -39,27 +39,29 @@
 						<div class="inner">
 							<!-- <div id="artwork" -->
 								<h1>Hurricane Visualization</h1>
-								<span class="image main"><img src="images/MASH/hurr6finalspan.png" alt=""/></span>
-								<p>This project was an excursion into a purely visual </p>
-								<div id="center">
+								<!-- <span class="image main"><img src="images/MASH/hurr6finalspan.png" alt=""/></span> -->
+								<p>This project was an excursion into a purely visual form of 3D modeling. The project came about as a desire to utilize the new toolpack that was packaged into the Maya 2017 version update called MASH. The powerful collection of features included a more functional version of Maya's tool XGen. XGen is used typically for procedually generated features and can place and manipulate objects according to given functions. I had previously attempted to produce this project's effect using XGen with unsatisfactory results. While the prcoess worked with XGen, the issue arose when trying to render the scene that the objects that were created did not respond well with the scene's lighting. Most of these issues were solved by using MASH, although object's materials got replaced by a default material due since the colors were being procedually manipulated, leading to a lackluster sheen.</p>
+								<p>The scene setup was fairly basic. It began with a single grey cube. Then MASH was used to turn this one cube into a grid of 500 by 500 of these cubes, 250,000 total. Each of these cubes acted as a single pixel, each being able to be manipulated through a script, like a low definition screen. Once I had the grid I chose a photo that would translate well into a 3D scene. Once I had my photo I converted it into greyscale and applied a pixelation filter with a resolution that would give a 500 by 500 result that mached my grid of cubes. This photo was applied as the cube height map, multiplying the cubes' heights' by the greyscale value of the pixel ontop of each cube.</p>
+								<!--<div id="center">
 									<img src="images/MASH/galm3final.png" alt="" height="512" width="512"/>
 								</div>
-								<p>3</p>
+								<p>I then changed the underlying picture to something that I thought might be more interesting.</p> !-->
 								<div id="center">
-									<p>New height map with no texture</p>
+									<!-- <p>New height map with no texture</p> -->
 									<img src="images/MASH/hurr1.png" alt="" height"512" width"512"/>
 									<img src="images/MASH/hurr2cm.png" alt="" height"512" width"512"/>
 								</div>
-								<p>4</p>
+							</br>
+								<p>Finally, in order to give the cubes colors, I used a process extremely similar to how I made the height map. Using the same original image I again applied the pixelation filter. However, this time I kept the original colors instead of using the greyscale values. This image was applied as a texture map and the colors were projected onto the cube underneath each pixel.</p>
 								<div id="center">
-									<p>Intermediate versions</p>
 									<img src="images/MASH/hurr3.png" alt="" height"512" width"512"/>
 									<img src="images/MASH/hurr5cm.png" alt="" height"512" width"512"/>
 								</div>
-								<p>5</p>
+							</br>
+								<p>Satisfied with the result, after conceding that I wouldn't be able to give the cubes a glossy attribute in their texture, I set up the scene for a final render. This process encompassed positioning two plane lights and an area light to give the scene a natural look. These individual lights' positions can easily be seen in the photos above. The final step in the process was placing the camera at the best angle in order to not see the edges of the scene's plane and allow for some soft shadows to be picked up. The scene was then rendered in a 4k resolution square, taking about 20 minutes.</p>
 								<div id="center">
-									<p>Final version</p>
 									<img src="images/MASH/hurr6final.png" alt="" height"512" width"512"/>
+									<p>Hurricane</p>
 								</div>
 								<!-- <div id="metadata">
 									<p>loltest</p>
