--- a/brainPrint.html
+++ b/brainPrint.html
@@ -38,10 +38,11 @@
 					<div id="main">
 						<div class="inner">
 							<h1>3D Printing My Own Brain</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>When I got a full head MRI I requested the files, and with them I developed a method to mesh the 2D JPEG files into a file containing 3D voxels. The process involved taking the </p>
-							<p>2</p>
-							<p>3</p>
+							<p>In 2014 there came a time that I was in need of a full head MRI scan in order to see what kind of shape my brain was in. I saw this as an oppertunity to do make something interesting and extremely unique. I decided that I would attempt to turn the data into a 3D printable model and print it out at a 1:1 scale. At the time, 3D printing was still relaively new, especially medical 3D printing, therefor there wasn't a concrete method at the time to turn MRI scan data into a usable 3D model however I wouldn't let this deter me. At the time of the scan I requested for a copy of the data to be made for me to be picked up. It came int he form of a cd disk with a commercial MRI viewer installed to present the data to the user. I extracted the data that it was displaying from the program and stored it in a file for my use. There was information from 4 different types of scans that they performed at the same time. One was a relatively detailed alebit small resolution scan, while the other were each high definition and high resolution in one direction: front to back, side to side, and top to bottom. I ended up choosing the scan for printing through trial and error to see which one would look the best when scaled up to 1:1 which was somewhat of an arduous process. In order to compile the data into a 3D model I used a program called <a href="http://www.osirix-viewer.com/osirix/osirix-md/download-osirix-lite/">OsiriX MD</a> to make the rough model in conjunction with <a href="https://simpleware.com/software/scanip/">Simpleware's ScanIP</a> to clean it up and fix all of the errors in the model. Once the model was solidifed I printed it at 1:1 ration with 10% infill which took 48 hours to print.
+							</p>
+							<div id="center">
+								<img src="brainFinal.jpg"/>
+							</div>
 						</div>
 					</div>
 
