--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 										<img src="images/streamline_transparent_resized.png" alt="" />
 									</span>
 									<a href="tdcs.html">
-										<h2>TDCS Research</h2>
+										<h2>Science Research Project</h2>
 										<div class="content">
 											<p>Culmination of a three year research project</p>
 										</div>
