--- a/key.html
+++ b/key.html
@@ -38,13 +38,19 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Keythulhu</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>This project started by finding a blank 3D model of a standard keycap for a mechanical keyboard to model around. With the blank form I started working on a rough looking octopus as my kepcap topper. As more detail was added it was fitted better in form around the cap. In order to pose the tenticles I needed to find a way through which they could be easily adjusted without me having to pose each vertex in order to keep the curves smooth. In order to do this I took a page out of the animation book. Each tenticle is rigged with what are known as "bones". These bones each control a certain portion of the mesh with a certain weight. This way when the mesh is deformed by the bone controls it looks very natrual and has no sharp edges. The other benefit of this method of posing is that it allows me to reuse and repose the model in any way I want.</p>
+							<!--<span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
+							<p>When I built my second computer I decided to use a mechanical keyboard as had been reccomended to me. After having tested out a few I decided upon the Quickfire TK as it was compact, still had a 10-key pad, and fit my computer's color scheme. Once I got it it occured to me that since the keycaps were removable, it would be relatively easy to make a custon keycap that would help personalize an otherwise generic peripheral. The keycap started by finding a 3D model of a factory specification, generic, blank keycap to form my model around. With this template I started working on a rough looking octopus as my key topper.
 							<!--<div id="center">
-								<img src=""/>
+									<img src="roughOcto.jpg"/>
+								</div>
+							-->
+						</br> </br>
+							As more detail was added it was fitted better in form around the cap. In order to pose the tenticles I needed to find a way through which they could be easily adjusted without me having to pose each vertex in order to keep the curves smooth. In order to do this I took a page out of the animation book. Each tenticle is rigged with what are known as "bones". These bones each control a certain portion of the mesh with a certain weight. This way when the mesh is deformed by the bone controls it looks very natrual and has no sharp edges. The other benefit of this method of posing is that it allows me to reuse and repose the model in any way I want since this is the same way that characters used in animated movies are created.</p>
+							<!-- <div id="center">
+								<img src="bones.jpg"/>
 								<p>Bone rigging</p>
-							</div>-->
-							<p>Once I had the octopus posed the way I wanted and fitted around the keycap, I merged the two models into one singular model. This is an important step in 3D printing that both reduces the amount of material used and prevents the two models from accidentally separating after printing. I then checked the model for errors and, having not seen any, sent it to be printed at <a href="https://www.shapeways.com/product/HEF36F3JJ/keythulhu">Shapeways</a>.</p>
+							</div> -->
+							<p>Once I had the octopus posed the way I wanted and fitted around the keycap, I merged the two models into one singular model. This is an important step in 3D printing that both reduces the amount of material used and prevents the two models from accidentally separating after printing. I then checked the model for errors sent it to be printed at <a href="https://www.shapeways.com/product/HEF36F3JJ/keythulhu">Shapeways</a>.</p>
 
 							<!-- 3D viewer -->
 							<div id="center">
