--- a/tdcs.html
+++ b/tdcs.html
@@ -37,15 +37,28 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>TDCS Study</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+						</br>
+							<h1>High School Science Research Project</h1>
 							<p>When I entered 10th grade I was presented with the oppertunity to persure my own research through a three year college level course called Authentic Science Research through the University at Albany. I saw this as an excellent chance to persure something that I was interested in with relative freedom and get my first taste of what college coursework would be like.</p>
-							<p>The project began with</p>
-							<p>Through reaching out to protential mentors I began talking to Professor Marom Bikson about the work that <a href="http://neuralengr.com/">he was conducting</a>. I was invited down to attend the annual <a href="http://www.neuromodulation.org/default.aspx">Neuromodulation Conference</a> at the City College of New York where Dr. Bikson was the chair of the conference. After the conference I was ultimatly invited to work in the labratory to conduct my own research over the then upcoming summer. Once or twice every week I would take a train into the city to visit the lab and what I couldn't finish there I would work on at home.</p>
+							<p>The project began with reading ten articles and ranking them in the order that they interested me. From this I would read scientific journals in the top three ranked subject areas. This process continued to slowly narrow down the subject area from something very broad to something that could be turned into a research question. During this process I ran into an issue however. I was originally going to research brain-computer interfaces but there wasn't enough scientific research conducted on them due to the fact theat they are relatively new and most experiments conducted on the systems seemed to be informal and conducted by computer programmers. This halted my progress for a time until I was told about a new process that was starting to emerge. Through <a href="http://www.radiolab.org/story/9-volt-nirvana/">this</a> podcast I was introduced to the topic that would eventually turn into my area of research.</p>
+							<p>Once we chose our area of research we were guided through the process of finding a mentor. In order to do this we reached out to the researchers who had authored the scientific journals that had interested us the most. For me this was a paper detailing the effect of a small electrical current transgressing <!-- I dont think this is the right word but its very similar --> through a persons brain. Supposedly this current helps with a myriad of ailments as well as helping to enhance the ability of the brain. Although these probably aren't all true, research suggests some important benefits for people who have had brain damage and informally people who experiment with it ont heir own believe it to enhance their brains. This process is called trans-cranial direct current stimulation, or TDCS.</br>
+							Luckily for me a professor who had written the article that interested me the most and worked nearby in New York City, responded to me and began helping me further my research. He talked to me about the work that <a href="http://neuralengr.com/">he was conducting</a> and invited me to attend the annual <a href="http://www.neuromodulation.org/default.aspx">Neuromodulation Conference</a> at the City College of New York where he was the chair of the conference. After the conference we continued discussing how I could move forward in my project. Eventually we began talking about me joining him in his labratory over the summer in order to conduct my own research. After arranging the details I ended up taking the train into the city once or twice every week to visit the lab. When I went to the lab for the first time I met Dennis Truong who supervised and guided me. I began by learning the software <a href="https://simpleware.com/software/scanip/">Simplewares ScanIP</a> and honed my skills by helping work on segmenting, or notating the different matter in the brain, for one of their current research papers. Once I was confident with the software I fully segmented one model of a head and was taught how to simulate electrical currents through the model that I derived using <a href="https://www.comsol.com/">COMSOL Multiphysics</a>.</p>
+								<div id="center">
+									<img src="brainFinal.jpg"/>
+									<p>Example of a simulation</p>
+								</div>
+							</br></br>
+							<p>
+							After learning the two main tools that I needed I started defining my research question. After continuously refinining, rewording and adjusting the question I arrived upon the most succinct version of what I was trying to discover. "Current Amplitude during Trans-Cranial Direct Current Stimulation within Brain in Relation to Thickness of Surrounding Matter" refers to the difference of the amount of current passing through the brain given an initial current on the outside of the head. Since the head is an insulator, not all of the initial current makes it through to the other side depending on the impedence of the matter across the electrodes. This is important because as you expand and scale up the process of TDCS towards the public a wide variety of people will be using the process and since everybody's head is different one needs to be certain that the appropriate current is being applied as to not harm the patient. To find out the correlation between the amount of matter surrounding the brain and the amount of current passing through it I first stimlated 6 different head models with a common, uniform current. I then measured the thickness of the matter between the CSF surroundingthe brain and the electrode in 24 different places underneath the electrical pads. To normalize the current I plotted the thicknesses and their corresponding amplitudes from the first simulation so that a trend would ppear relating the two. I then devised a formula that would take the varying thicknesses and, give a suggested amplitude, and subsequently try to predict the resultant amplitude. When I resimulated the 6 heads using my formula I found that it was able to bring the amount of current in all of the heads very close to eachother, thus showing that it was able to normalize the current in the brain by varying the input amplitude.
+							</p>
 							<div id="center"> <!-- TRY TO MAKE TEXT WRAP AROUND THIS TO THE LEFT? MAKE THIS RIGHT JUSTIFIED?-->
 								<iframe src="https://drive.google.com/file/d/0B45T8NgNh44_akl6SGJHa0xWLVk/preview" width="720" height="925"></iframe>
 								<p>Paper Submitted to Symposium</p></br>
 							</div>
+							<p>
+							I submitted the above research to the Junior Science and Humanities Symposium, a culmination of research from the Authentic Science Research program, which accepted my paper and invited me to present at the 31rst annual symposium in the physical science category. Although I did not end up placing in the competition and moving on to the regional symposium, the experience was invaluable.
+							</p></br>
+
 							<p>From the <a href="http://www.kingstoncityschools.org/news.cfm?story=112443">Kingston City School District's Website</a>:</p>
 							<blockquote>
 KHS Student Presents Science Research for Competition</br>
@@ -61,7 +74,6 @@ The presentation will take place at Burnt Hills Ballston Lake High School on Sat
 
 The symposium is sponsored by the University at Albany, the Academy of Applied Science and the U.S. Army, Navy and Air Force.
 </blockquote>
-						<p>Although I did not place in the competition, the experience was invaluable and I was invited back to Dr. Bikson's labratory to work towards getting my work published.</p>
 						</div>
 					</div>
 
