added a page and changed the logo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<header id="header">
 						<div class="inner">
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">EHL</span>
 									<!--<span class="title">Evan Lewis</span>-->
 								</a>
 								<nav>
@@ -86,6 +86,17 @@
 										<h2>Visualizing Brainwaves</h2>
 										<div class="content">
 											<p>Using the Emotiv Insight EEG headset, the data can be modeled into 3D objects.</p>
+										</div>
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/roomba.png" alt="" />
+									</span>
+									<a href="hackathon.html">
+										<h2>IEEE Hackathon</h2>
+										<div class="content">
+											<p>My team's project from the IEEE club's 2016 Hackaton</p>
 										</div>
 									</a>
 								</article>
