--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 											<p>How can you easily visualize music?</p>
 										</div>
 									</a>
-								</article>
-							-->
+								</article>-->
 								<article class="tile">
 									<span class="image">
 										<img src="images/brainWaves.png" alt="" />
@@ -119,6 +118,17 @@
 										<h2>3D Designed and Printed Keycap</h2>
 										<div class="content">
 											<p>Created a octopus to grasp a key on my keyboard.</p>
+										</div>
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/cyberpatriot.png" alt="" />
+									</span>
+									<a href="cyberpatriot.html">
+										<h2>CyberPatriot VIII</h2>
+										<div class="content">
+											<p>Leading a team in the AFA's CyberPatriot Competition</p>
 										</div>
 									</a>
 								</article>
