--- a/index.html
+++ b/index.html
@@ -1,1 +1,158 @@
 
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Evan Lewis</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/photoWebsite.css" />
+
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+
+
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-92519809-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
+
+	</head>
+	<body>
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<div class="inner">
+								<a href="index.html" class="logo">
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">EHL</span>
+									<!--<span class="title">Evan Lewis</span>-->
+								</a>
+						</div>
+					</header>
+
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+							<header>
+								<h1>Evan Lewis</h1>
+								<div id="center">
+									<p>Hoboken, NJ</p>
+								</div>
+							</header>
+							<section class="tiles">
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A7855Square.jpg" alt="" />
+									</span>
+									<a href="brainwaves.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A7914 copy.jpg" alt="" />
+									</span>
+									<a href="brainwaves.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A7926 copy.jpg" alt="" />
+									</span>
+									<a href="brainwaves.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8166 copy.jpg" alt="" />
+									</span>
+									<a href="brainwaves.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8240 copy.jpg" alt="" />
+									</span>
+									<a href="brainwaves.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8266 copy.jpg" alt="" />
+									</span>
+									<a href="brainwaves.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8371 copy.jpg" alt="" />
+									</span>
+									<a href="brainwaves.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8419-Pano copy.jpg" alt="" />
+									</span>
+									<a href="brainwaves.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8429-Edit copy.jpg" alt="" />
+									</span>
+									<a href="brainwaves.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8518 copy.jpg" alt="" />
+									</span>
+									<a href="brainwaves.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8294 copy.jpg" alt="" />
+									</span>
+									<a href="brainwaves.html">
+									</a>
+								</article>
+							</section>
+						</div>
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<section>
+								<div id="center">
+									<p>Get in touch</p>
+								</div>
+								<ul class="icons">
+									<li><a href="tel:845-943-8056" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="mailto:ehlewis@me.com?Subject=Website" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+								</ul>
+							</section>
+						</div>
+
+						<div class="inner">
+							<section>
+								<ul class="copyright">
+									<li>&copy; Evan Lewis | All rights reserved</li>
+								</ul>
+							</section>
+						</div>
+					</footer>
+			</div>
+	</body>
+</html>
