Filled photography page

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Evan Lewis</h1>
+									<h1>Evan Lewis</h1>
 								<div id="center">
-									<p>Hoboken, NJ</p>
+									<p>Iceland Collection</p>
 								</div>
 							</header>
 							<section class="tiles">
@@ -54,77 +54,84 @@
 									<span class="image">
 										<img src="images/Iceland/4C2A7855Square.jpg" alt="" />
 									</span>
-									<a href="brainwaves.html">
+									<a href="iceland/4C2A7855.html">
 									</a>
 								</article>
 								<article class="tile">
 									<span class="image">
 										<img src="images/Iceland/4C2A7914 copy.jpg" alt="" />
 									</span>
-									<a href="brainwaves.html">
+									<a href="iceland/4C2A7914.html">
 									</a>
 								</article>
 								<article class="tile">
 									<span class="image">
 										<img src="images/Iceland/4C2A7926 copy.jpg" alt="" />
 									</span>
-									<a href="brainwaves.html">
-									</a>
-								</article>
-								<article class="tile">
-									<span class="image">
-										<img src="images/Iceland/4C2A8166 copy.jpg" alt="" />
-									</span>
-									<a href="brainwaves.html">
-									</a>
-								</article>
-								<article class="tile">
-									<span class="image">
-										<img src="images/Iceland/4C2A8240 copy.jpg" alt="" />
-									</span>
-									<a href="brainwaves.html">
-									</a>
-								</article>
-								<article class="tile">
-									<span class="image">
-										<img src="images/Iceland/4C2A8266 copy.jpg" alt="" />
-									</span>
-									<a href="brainwaves.html">
-									</a>
-								</article>
-								<article class="tile">
-									<span class="image">
-										<img src="images/Iceland/4C2A8371 copy.jpg" alt="" />
-									</span>
-									<a href="brainwaves.html">
-									</a>
-								</article>
-								<article class="tile">
-									<span class="image">
-										<img src="images/Iceland/4C2A8419-Pano copy.jpg" alt="" />
-									</span>
-									<a href="brainwaves.html">
+									<a href="iceland/4C2A7926.html">
 									</a>
 								</article>
 								<article class="tile">
 									<span class="image">
 										<img src="images/Iceland/4C2A8429-Edit copy.jpg" alt="" />
 									</span>
-									<a href="brainwaves.html">
+									<a href="iceland/4C2A8429-Edit.html">
 									</a>
 								</article>
 								<article class="tile">
 									<span class="image">
-										<img src="images/Iceland/4C2A8518 copy.jpg" alt="" />
+										<img src="images/Iceland/4C2A8166 copy.jpg" alt="" />
 									</span>
-									<a href="brainwaves.html">
+									<a href="iceland/4C2A8166.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8240 copy.jpg" alt="" />
+									</span>
+									<a href="iceland/4C2A8240.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8266 copy.jpg" alt="" />
+									</span>
+									<a href="iceland/4C2A8266.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8371 copy.jpg" alt="" />
+									</span>
+									<a href="iceland/4C2A8371.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8419-Pano copy.jpg" alt="" />
+									</span>
+									<a href="iceland/4C2A8419-Pano.html">
 									</a>
 								</article>
 								<article class="tile">
 									<span class="image">
 										<img src="images/Iceland/4C2A8294 copy.jpg" alt="" />
 									</span>
-									<a href="brainwaves.html">
+									<a href="iceland/4C2A8294.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8518 copy.jpg" alt="" />
+									</span>
+									<a href="iceland/4C2A8518.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A7733 copy.jpg" alt="" />
+									</span>
+									<a href="iceland/4C2A7733.html">
 									</a>
 								</article>
 							</section>
