Image size decreased to increase loading speed

--- a/iceland/4C2A8429-Edit.html
+++ b/iceland/4C2A8429-Edit.html
@@ -38,12 +38,12 @@
 					<div id="main">
 						<div class="inner">
 							<!-- <div id="artwork" -->
-								<div id="center">
-									<img src="../images/Iceland/4C2A8429-Edit.jpg" alt=""/>
-								</div>
-							</br>
-								<p></p>
-							</br>
+							<div id="center">
+								<img src="../images/Iceland/4C2A8429-Edit.jpg" alt=""/>
+								<p>Glacial Lake in southern Iceland</p>
+								<p>Available on HD Aluminium panel on sizes up to 24 by 36 or Metallic Photo Paper on sizes up to 40 by 60</p>
+								<!--12x18, 20x30,  -->
+							</div>
 						</div>
 					</div>
 
