--- a/iceland/4C2A7855.html
+++ b/iceland/4C2A7855.html
@@ -39,9 +39,9 @@
 						<div class="inner">
 								<div id="center">
 									<img src="../images/Iceland/4C2A7855.jpg" alt=""/>
+									<p><b>Northern Coastline</b><br>Fjallabyggð, Iceland<br>66°11'8"N, 18°55'41"W</p><!--66.1856, -18.9281</p>-->
+									<p>Available on<br>Metallic Photo Paper | HD Aluminium Panel</p>
 								</div>
-							</br>
-								<p></p>
 							</br>
 						</div>
 					</div>
