--- a/iceland/4C2A7914.html
+++ b/iceland/4C2A7914.html
@@ -40,6 +40,8 @@
 							<!-- <div id="artwork" -->
 								<div id="center">
 									<img src="../images/Iceland/4C2A7914.jpg" alt=""/>
+									<p><b>Mountain River</b><br>Dalvik, Iceland<br>65°58'31"N, 18°32'43"W</p><!--65.9754, -18.5452</p>-->
+									<p>Available on<br>Metallic Photo Paper | HD Aluminium Panel</p>
 								</div>
 							</br>
 								<p></p>
