--- a/iceland/4C2A8166.html
+++ b/iceland/4C2A8166.html
@@ -40,6 +40,10 @@
 							<!-- <div id="artwork" -->
 								<div id="center">
 									<img src="../images/Iceland/4C2A8166.jpg" alt=""/>
+									<p><b>Dettifoss</b><br>Norðurþing, Iceland<br>65°48'55"N, 16°23'2"W<!--65.8152, -16.3840--></p>
+									<p>Available on<br>Metallic Photo Paper | HD Aluminium Panel</p> <!-- <br> Contact for ordering information</p>-->
+									<!--<p>Available on <br> Metallic Photo Paper on sizes up to 40 by 60 | HD Aluminium panel on sizes up to 24 by 36</p>-->
+									<!--12x18, 20x30,  -->
 								</div>
 							</br>
 								<p></p>
