--- a/iceland/4C2A8240.html
+++ b/iceland/4C2A8240.html
@@ -40,6 +40,10 @@
 							<!-- <div id="artwork" -->
 								<div id="center">
 									<img src="../images/Iceland/4C2A8240.jpg" alt=""/>
+									<p><b>Barren Sunset</b><br>Hólsfjallavegur, Iceland<br>65°43'12"N, 16°19'43"W</p><!--65.7199, -16.3287</p>-->
+									<p>Available on<br>Metallic Photo Paper | HD Aluminium Panel</p> <!-- <br> Contact for ordering information</p>-->
+									<!--<p>Available on <br> Metallic Photo Paper on sizes up to 40 by 60 | HD Aluminium panel on sizes up to 24 by 36</p>-->
+									<!--12x18, 20x30,  -->
 								</div>
 							</br>
 								<p></p>
