--- a/iceland/4C2A8429-Edit.html
+++ b/iceland/4C2A8429-Edit.html
@@ -28,7 +28,7 @@
 
 							<!-- Logo -->
 								<a href="../index.html" class="logo">
-									<span class="symbol"><img src="../images/logo.svg" alt="" /></span><span class="title">Evan Lewis</span>
+									<span class="symbol"><img src="../images/logo.svg" alt=""></span><span class="title">Evan Lewis</span>
 								</a>
 
 						</div>
@@ -40,8 +40,9 @@
 							<!-- <div id="artwork" -->
 							<div id="center">
 								<img src="../images/Iceland/4C2A8429-Edit.jpg" alt=""/>
-								<p>Glacial Lake in southern Iceland</p>
-								<p>Available on HD Aluminium panel on sizes up to 24 by 36 or Metallic Photo Paper on sizes up to 40 by 60</p>
+								<p><b>Glacial Lake in southern Iceland</b><br>Hringvegur, Iceland<br>64°2'47"N, 16°10'58"W</p><!--64.0463, -16.1828</p>-->
+								<p>Available on<br>Metallic Photo Paper | HD Aluminium Panel</p> <!-- <br> Contact for ordering information</p>-->
+								<!--<p>Available on <br> Metallic Photo Paper on sizes up to 40 by 60 | HD Aluminium panel on sizes up to 24 by 36</p>-->
 								<!--12x18, 20x30,  -->
 							</div>
 						</div>
