--- a/iceland/4C2A8518.html
+++ b/iceland/4C2A8518.html
@@ -40,6 +40,8 @@
 							<!-- <div id="artwork" -->
 								<div id="center">
 									<img src="../images/Iceland/4C2A8518.jpg" alt=""/>
+									<p><b>Skógafoss</b><br>Skógar, Iceland<br>63°31′47″N, 19°30′50″W﻿</p>
+									<p>Available on<br>Metallic Photo Paper | HD Aluminium Panel</p>
 								</div>
 							</br>
 								<p></p>
