--- a/iceland.html
+++ b/iceland.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE HTML>
 <html>
 	<head>
 		<title>Evan Lewis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/photoWebsite.css" />
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
@@ -36,122 +37,101 @@
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">EHL</span>
 									<!--<span class="title">Evan Lewis</span>-->
 								</a>
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
 						</div>
 					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About Me</a></li>
-							<li><a href="threeTest.html">Octopus</a></li>
-						</ul>
-					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Evan Lewis</h1>
+									<h1>Evan Lewis</h1>
 								<div id="center">
-									<p>Hoboken, NJ</p>
+									<p>Iceland Collection</p>
 								</div>
-								<!-- <h2>What do I do?</h2> -->
 							</header>
 							<section class="tiles">
-								<!--
 								<article class="tile">
 									<span class="image">
-										<img src="images/hurr3ourcm.png" alt="" />
+										<img src="images/Iceland/4C2A7855Square.jpg" alt="" />
 									</span>
-									<a href="music.html">
-										<h2>Music Visualization</h2>
-										<div class="content">
-											<p>How can you easily visualize music?</p>
-										</div>
-									</a>
-								</article>-->
-								<article class="tile">
-									<span class="image">
-										<img src="images/brainWaves.png" alt="" />
-									</span>
-									<a href="brainwaves.html">
-										<h2>Visualizing Brainwaves</h2>
-										<div class="content">
-											<p>Using the Emotiv Insight EEG headset, the data can be modeled into 3D objects.</p>
-										</div>
+									<a href="iceland/4C2A7855.html">
 									</a>
 								</article>
 								<article class="tile">
 									<span class="image">
-										<img src="images/roomba.png" alt="" />
+										<img src="images/Iceland/4C2A7914 copy.jpg" alt="" />
 									</span>
-									<a href="hackathon.html">
-										<h2>IEEE Hackathon</h2>
-										<div class="content">
-											<p>My team's project from the IEEE club's 2016 Hackaton</p>
-										</div>
+									<a href="iceland/4C2A7914.html">
 									</a>
 								</article>
 								<article class="tile">
 									<span class="image">
-										<img src="images/MASH/hurr6final.png" alt="" />
+										<img src="images/Iceland/4C2A7926 copy.jpg" alt="" />
 									</span>
-									<a href="mash.html">
-										<h2>Maya MASH</h2>
-										<div class="content">
-											<p>Color histogram from radar data made into an object using MASH.</p>
-										</div>
+									<a href="iceland/4C2A7926.html">
 									</a>
 								</article>
 								<article class="tile">
 									<span class="image">
-										<img src="images/octoKey.jpg" alt="" />
+										<img src="images/Iceland/4C2A8429-Edit copy.jpg" alt="" />
 									</span>
-									<a href="key.html">
-										<h2>3D Designed and Printed Keycap</h2>
-										<div class="content">
-											<p>Created a octopus to grasp a key on my keyboard.</p>
-										</div>
+									<a href="iceland/4C2A8429-Edit.html">
 									</a>
 								</article>
 								<article class="tile">
 									<span class="image">
-										<img src="images/cyberpatriot.png" alt="" />
+										<img src="images/Iceland/4C2A8166 copy.jpg" alt="" />
 									</span>
-									<a href="cyberpatriot.html">
-										<h2>CyberPatriot VIII</h2>
-										<div class="content">
-											<p>Leading a team in the AFA's CyberPatriot Competition</p>
-										</div>
+									<a href="iceland/4C2A8166.html">
 									</a>
 								</article>
 								<article class="tile">
 									<span class="image">
-										<img src="images/streamline_transparent_resized.png" alt="" />
+										<img src="images/Iceland/4C2A8240 copy.jpg" alt="" />
 									</span>
-									<a href="tdcs.html">
-										<h2>Science Research Project</h2>
-										<div class="content">
-											<p>Culmination of a three year research project</p>
-										</div>
+									<a href="iceland/4C2A8240.html">
 									</a>
 								</article>
 								<article class="tile">
 									<span class="image">
-										<img src="images/brainPrint.jpg" alt="" />
+										<img src="images/Iceland/4C2A8266 copy.jpg" alt="" />
 									</span>
-									<a href="brainPrint.html">
-										<h2>3D Printing my Brain</h2>
-										<div class="content">
-											<p>Life size personal brain print</p>
-										</div>
+									<a href="iceland/4C2A8266.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8371 copy.jpg" alt="" />
+									</span>
+									<a href="iceland/4C2A8371.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8419-Pano copy.jpg" alt="" />
+									</span>
+									<a href="iceland/4C2A8419-Pano.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8294 copy.jpg" alt="" />
+									</span>
+									<a href="iceland/4C2A8294.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A8518 copy.jpg" alt="" />
+									</span>
+									<a href="iceland/4C2A8518.html">
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/Iceland/4C2A7733 copy.jpg" alt="" />
+									</span>
+									<a href="iceland/4C2A7733.html">
 									</a>
 								</article>
 							</section>
@@ -166,8 +146,6 @@
 									<p>Get in touch</p>
 								</div>
 								<ul class="icons">
-									<li><a href="https://www.facebook.com" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="https://github.com/ehlewis" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="tel:845-943-8056" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
 									<li><a href="mailto:ehlewis@me.com?Subject=Website" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
