content and organization

--- a/steps.html
+++ b/steps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Evan Lewis - Brain Waves</title>
+		<title>Evan Lewis - Health Biometrics</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -37,8 +37,20 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Transforming Brain Waves</h1>
+							<h1>How Many Steps Have I Taken?</h1>
 							<p></p>
+
+
+							<pre><code>Steps:  20078532.0
+Miles:  10039.266
+Exercise Time:  28488.0
+Average Heartbeat:  75.198038595
+Flights Climbed:  191059.558
+Active Calories Burned(kcal):  191059.558
+Basal calories burned (kcal):  0
+Distance walking running (mi):  9352.63668092
+Stand Hours:  6860</code></pre>
+
 
 							<p></p>
 							<!--Breakdown the code above into its functions and segments-->
