--- a/key.html
+++ b/key.html
@@ -39,13 +39,13 @@
 						<div class="inner">
 							<h1>Keythulhu</h1>
 							<!--<span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
-							<p>When I built my second computer I decided to use a mechanical keyboard as had been reccomended to me. After having tested out a few I decided upon the Quickfire TK as it was compact, still had a 10-key pad, and fit my computer's color scheme. Once I got it it occured to me that since the keycaps were removable, it would be relatively easy to make a custon keycap that would help personalize an otherwise generic peripheral. The keycap started by finding a 3D model of a factory specification, generic, blank keycap to form my model around. With this template I started working on a rough looking octopus as my key topper.
+							<p>When I built my second computer I decided to use a mechanical keyboard as had been recommended to me. After having tested out a few I decided upon the Quickfire TK as it was compact, still had a 10-key pad, and fit my computer's color scheme. I got the idea that since the keycaps were removable, it would be relatively easy to make a custom keycap that would help personalize an otherwise generic peripheral. The keycap started by finding a 3D model of a factory specification, generic, blank keycap to form my model around. With this template I started working on a rough looking octopus as my key topper.
 							<!--<div id="center">
 									<img src="roughOcto.jpg"/>
 								</div>
 							-->
 						</br> </br>
-							As more detail was added it was fitted better in form around the cap. In order to pose the tenticles I needed to find a way through which they could be easily adjusted without me having to pose each vertex in order to keep the curves smooth. In order to do this I took a page out of the animation book. Each tenticle is rigged with what are known as "bones". These bones each control a certain portion of the mesh with a certain weight. This way when the mesh is deformed by the bone controls it looks very natrual and has no sharp edges. The other benefit of this method of posing is that it allows me to reuse and repose the model in any way I want since this is the same way that characters used in animated movies are created.</p>
+							As more detail was added it was fitted better in form around the cap. In order to pose the tentacles, I needed to find a way through which they could be easily adjusted without me having to pose each vertex in order to keep the curves smooth. In order to do this I took a page out of the animation book. Each tentacle is rigged with what are known as "bones". These bones each control a certain portion of the mesh with a certain weight. This way when the mesh is deformed by the bone controls it looks very natural and has no sharp edges. The other benefit of this method of posing is that it allows me to reuse and repose the model in any way I want since this is the same way that characters used in animated movies are created.</p>
 							<!-- <div id="center">
 								<img src="bones.jpg"/>
 								<p>Bone rigging</p>
@@ -115,9 +115,9 @@
 							<section>
 								<h2>Get in touch</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+									<li><a href="https://github.com/ehlewis" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="tel:845-943-8056" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="mailto:ehlewis@me.com?Subject=Website" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 						</div>
