--- a/mash.html
+++ b/mash.html
@@ -40,8 +40,8 @@
 							<!-- <div id="artwork" -->
 								<h1>Hurricane Visualization</h1>
 								<!-- <span class="image main"><img src="images/MASH/hurr6finalspan.png" alt=""/></span> -->
-								<p>This project was an excursion into a purely visual form of 3D modeling. The project came about as a desire to utilize the new toolpack that was packaged into the Maya 2017 version update called MASH. The powerful collection of features included a more functional version of Maya's tool XGen. XGen is used typically for procedually generated features and can place and manipulate objects according to given functions. I had previously attempted to produce this project's effect using XGen with unsatisfactory results. While the prcoess worked with XGen, the issue arose when trying to render the scene that the objects that were created did not respond well with the scene's lighting. Most of these issues were solved by using MASH, although object's materials got replaced by a default material due since the colors were being procedually manipulated, leading to a lackluster sheen.</p>
-								<p>The scene setup was fairly basic. It began with a single grey cube. Then MASH was used to turn this one cube into a grid of 500 by 500 of these cubes, 250,000 total. Each of these cubes acted as a single pixel, each being able to be manipulated through a script, like a low definition screen. Once I had the grid I chose a photo that would translate well into a 3D scene. Once I had my photo I converted it into greyscale and applied a pixelation filter with a resolution that would give a 500 by 500 result that mached my grid of cubes. This photo was applied as the cube height map, multiplying the cubes' heights' by the greyscale value of the pixel ontop of each cube.</p>
+								<p>This project was an excursion into a purely visual form of 3D modeling. The project came about as a desire to utilize the new tool pack that was packaged into the Maya 2017 version update called MASH. The powerful collection of features included a more functional version of Maya's tool XGen. XGen is used typically for procedurally generated features and can place and manipulate objects according to given functions. I had previously attempted to produce this project's effect using XGen with unsatisfactory results. While the process worked with XGen, the issue arose when trying to render the scene that the objects that were created did not respond well with the scene's lighting. Most of these issues were solved by using MASH, although object's materials got replaced by a default material due since the colors were being procedurally manipulated, leading to a lackluster sheen.</p>
+								<p>The scene setup was fairly basic. It began with a single grey cube. Then MASH was used to turn this one cube into a grid of 500 by 500 of these cubes, 250,000 total. Each of these cubes acted as a single pixel, each being able to be manipulated through a script, like a low definition screen. Once I had the grid I chose a photo that would translate well into a 3D scene. Once I had my photo I converted it into greyscale and applied a pixilation filter with a resolution that would give a 500 by 500 result that matched my grid of cubes. This photo was applied as the cube height map, multiplying the cubes' heights' by the greyscale value of the pixel on top of each cube.</p>
 								<!--<div id="center">
 									<img src="images/MASH/galm3final.png" alt="" height="512" width="512"/>
 								</div>
@@ -52,7 +52,7 @@
 									<img src="images/MASH/hurr2cm.png" alt="" height"512" width"512"/>
 								</div>
 							</br>
-								<p>Finally, in order to give the cubes colors, I used a process extremely similar to how I made the height map. Using the same original image I again applied the pixelation filter. However, this time I kept the original colors instead of using the greyscale values. This image was applied as a texture map and the colors were projected onto the cube underneath each pixel.</p>
+								<p>Finally, in order to give the cubes colors, I used a process extremely similar to how I made the height map. Using the same original image I again applied the pixilation filter. However, this time I kept the original colors instead of using the greyscale values. This image was applied as a texture map and the colors were projected onto the cube underneath each pixel.</p>
 								<div id="center">
 									<img src="images/MASH/hurr3.png" alt="" height"512" width"512"/>
 									<img src="images/MASH/hurr5cm.png" alt="" height"512" width"512"/>
@@ -77,9 +77,9 @@
 							<section>
 								<h2>Get in touch</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+									<li><a href="https://github.com/ehlewis" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="tel:845-943-8056" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="mailto:ehlewis@me.com?Subject=Website" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 						</div>
