--- a/iceland.html
+++ b/iceland.html
@@ -5,7 +5,7 @@
 		<title>Evan Lewis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/photoWebsite.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
@@ -51,84 +51,84 @@
 							</header>
 							<section class="tiles">
 								<article class="tile">
-									<span class="image">
+									<span class="image" style="background-color: transparent;">
 										<img src="images/Iceland/4C2A7855Square.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A7855.html">
 									</a>
 								</article>
 								<article class="tile">
-									<span class="image">
+									<span class="image"style="background-color: transparent;">
 										<img src="images/Iceland/4C2A7914 copy.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A7914.html">
 									</a>
 								</article>
 								<article class="tile">
-									<span class="image">
+									<span class="image"style="background-color: transparent;">
 										<img src="images/Iceland/4C2A7926 copy.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A7926.html">
 									</a>
 								</article>
 								<article class="tile">
-									<span class="image">
+									<span class="image"style="background-color: transparent;">
 										<img src="images/Iceland/4C2A8429-Edit copy.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A8429-Edit.html">
 									</a>
 								</article>
 								<article class="tile">
-									<span class="image">
+									<span class="image"style="background-color: transparent;">
 										<img src="images/Iceland/4C2A8166 copy.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A8166.html">
 									</a>
 								</article>
 								<article class="tile">
-									<span class="image">
+									<span class="image"style="background-color: transparent;">
 										<img src="images/Iceland/4C2A8240 copy.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A8240.html">
 									</a>
 								</article>
 								<article class="tile">
-									<span class="image">
+									<span class="image"style="background-color: transparent;">
 										<img src="images/Iceland/4C2A8266 copy.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A8266.html">
 									</a>
 								</article>
 								<article class="tile">
-									<span class="image">
+									<span class="image"style="background-color: transparent;">
 										<img src="images/Iceland/4C2A8371 copy.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A8371.html">
 									</a>
 								</article>
 								<article class="tile">
-									<span class="image">
+									<span class="image"style="background-color: transparent;">
 										<img src="images/Iceland/4C2A8419-Pano copy.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A8419-Pano.html">
 									</a>
 								</article>
 								<article class="tile">
-									<span class="image">
+									<span class="image"style="background-color: transparent;">
 										<img src="images/Iceland/4C2A8294 copy.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A8294.html">
 									</a>
 								</article>
 								<article class="tile">
-									<span class="image">
+									<span class="image"style="background-color: transparent;">
 										<img src="images/Iceland/4C2A8518 copy.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A8518.html">
 									</a>
 								</article>
 								<article class="tile">
-									<span class="image">
+									<span class="image"style="background-color: transparent;">
 										<img src="images/Iceland/4C2A7733 copy.jpg" alt="" />
 									</span>
 									<a href="iceland/4C2A7733.html">
