--- a/iceland.html
+++ b/iceland.html
@@ -146,7 +146,7 @@
 									<p>Get in touch</p>
 								</div>
 								<ul class="icons">
-									<li><a href="tel:845-943-8056" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<!-- <li><a href="tel:845-943-8056" class="icon style2 fa-phone"><span class="label">Phone</span></a></li> -->
 									<li><a href="mailto:ehlewis@me.com?Subject=Website" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
