--- a/mash.html
+++ b/mash.html
@@ -78,7 +78,7 @@
 								<h2>Get in touch</h2>
 								<ul class="icons">
 									<li><a href="https://github.com/ehlewis" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="tel:845-943-8056" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<!-- <li><a href="tel:845-943-8056" class="icon style2 fa-phone"><span class="label">Phone</span></a></li> -->
 									<li><a href="mailto:ehlewis@me.com?Subject=Website" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
