--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<!-- <h2>What do I do?</h2> -->
 							</header>
 							<section class="tiles">
-								<article class="tile">
+								<!-- <article class="tile">
 									<span class="image">
 										<img src="images/steps.png" alt="" />
 									</span>
@@ -64,7 +64,7 @@
 											<p>How can you manipulate all the data that iPhone Health stores?</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 								<!--
 								<article class="tile">
 									<span class="image">
