small adjustment for Iceland title

--- a/iceland.html
+++ b/iceland.html
@@ -44,9 +44,9 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-									<h1>Evan Lewis</h1>
+									<!-- <h1>Evan Lewis</h1> -->
 								<div id="center">
-									<p>Iceland Collection</p>
+									<h1>Iceland</h1>
 								</div>
 							</header>
 							<section class="tiles">
