--- a/iceland/4C2A8166.html
+++ b/iceland/4C2A8166.html
@@ -4,7 +4,7 @@
 		<title>Evan Lewis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="../assets/css/photoWebsite.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
