might have fixed undefined error
call mapInit only after load (wasn't a problem locally)

--- a/iceland/photomap.html
+++ b/iceland/photomap.html
@@ -103,6 +103,9 @@ function populateMap() {
     });
 }
 
+(window).load(function(){
+    google.maps.event.addDomListener(window, 'load', initMap);
+});
     </script>
 
   <!--</body>-->
