readded scale control
it was breaking on desktop but it looks like its not breaking online

--- a/iceland/photomap.html
+++ b/iceland/photomap.html
@@ -30,8 +30,8 @@ function initMap() {
     center: {lat: 64.9, lng: -18.4},
     zoom: 7,
     maxZoom: 18,
-    zoomControl: false,
-    scaleControl: false
+    zoomControl: true,
+    scaleControl: true
   });
 
   populateMap();
