missing dollar sign

--- a/iceland/photomap.html
+++ b/iceland/photomap.html
@@ -103,7 +103,7 @@ function populateMap() {
     });
 }
 
-(window).load(function(){
+$(window).load(function(){
     google.maps.event.addDomListener(window, 'load', initMap);
 });
     </script>
