Adding and removing content

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                         <div class="inner">
                                 <a href="index.html" class="logo">
                                     <span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">EHL</span>
-                                    <!--<span class="title">Evan Lewis</span>-->
                                 </a>
                                 <nav>
                                     <ul>
@@ -52,14 +51,21 @@
                             <header>
                                 <div id="center">
                                     <h1>Evan Lewis</h1>
-                                    <h2 style="font-family:'Droid Sans';">I break things</h2>
-                                    <p>Hoboken, NJ</p>
-                                    <hr /></br>
+                                    <p style="margin:0">Hoboken, NJ</p>
+                                    </br>
                                 </div>
                             </header>
-                            <div class="inner">
+                            <div id = "center" class="inner">
                                 <section>
-                                    <p>text goes in here</p>
+                                    <h6 style="margin:0">(among other things)</h6>
+                                    <h2 style="margin:0">Security Researcher</h2>
+                                    <h2 style="font-family:'Droid Sans';">I break things</h2>
+                                    <!--What fun is the world if you don't try new things. . I try to make boring things interesting.-->
+                                    <!--<p style="margin:0">I try to learn anything I can; nothing is useless</p>
+                                    <p style="margin:0">I make things work not as intended</p>-->
+                                    <!--<p>This website showcases some of my experiments.</p>-->
+                                </br>
+                                    <p>Versed in Python, C, C++, and JavaScript</p>
                                 </section>
                             </div>
                             <h2>Projects</h2>
