readme changes for aws

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     <p style="margin:0">I make things work not as intended</p>-->
                                     <!--<p>This website showcases some of my experiments.</p>-->
                                 </br>
-                                    <p>Versed in Python, C, C++, and JavaScript</p>
+                                    <p>Versed in Python, C, C++, and JavaScript. Focus on web security.</p>
                                 </section>
                             </div>
                             <h2>Projects</h2>
