--- a/index.html
+++ b/index.html
@@ -71,28 +71,17 @@
                             <h2>Projects</h2>
                             <hr /></br>
                             <section class="tiles">
-                                <!--<article class="tile">
+                                <article class="tile">
                                     <span class="image">
-                                        <img src="images/roomba.png" alt="" />
+                                        <img src="images/knotterlogo.png" alt="" />
                                     </span>
-                                    <a href="purpleHackathon.html">
-                                        <h2>Venture Hacks: Purple Hackathon</h2>
+                                    <a href="knotter.html">
+                                        <h2>Knotter</h2>
                                         <div class="content">
-                                            <p></p>
+                                            <p>Privacy focused finance</p>
                                         </div>
                                     </a>
-                                </article>-->
-                                <!-- <article class="tile">
-                                    <span class="image">
-                                        <img src="images/steps.png" alt="" />
-                                    </span>
-                                    <a href="steps.html">
-                                        <h2>Utilizing Apple Health Data</h2>
-                                        <div class="content">
-                                            <p>How can you manipulate all the data that iPhone Health stores?</p>
-                                        </div>
-                                    </a>
-                                </article> -->
+                                </article>
                                 <article class="tile">
                                     <span class="image">
                                         <img src="images/brainWaves.png" alt="" />
@@ -167,6 +156,28 @@
                                         <h2>3D Printing my Brain</h2>
                                         <div class="content">
                                             <p>Life size personal brain print</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="tile">
+                                    <span class="image">
+                                        <img src="images/streamline_transparent_resized.png" alt="" />
+                                    </span>
+                                    <a href="tdcs.html">
+                                        <h2>Science Research Project</h2>
+                                        <div class="content">
+                                            <p>Culmination of a three year research project</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="tile">
+                                    <span class="image">
+                                        <img src="images/iceland.jpg" alt="" />
+                                    </span>
+                                    <a href="iceland.html">
+                                        <h2>Iceland</h2>
+                                        <div class="content">
+                                            <p>Not tech related</p>
                                         </div>
                                     </a>
                                 </article>
